<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateCardActivity">

    <Button
        android:id="@+id/create_btn"
        android:layout_width="289dp"
        android:layout_height="61dp"
        android:layout_marginTop="60dp"
        android:enabled="false"
        android:onClick="onClickGETTOTHEBUSINESS"
        android:text="@string/create"
        android:backgroundTint="#C9D4FB"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:stateListAnimator="@null"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_gender"
        app:layout_constraintVertical_bias="0.0" />

    <Spinner
        android:id="@+id/inp_gender"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:dropDownVerticalOffset="-43dp"
        android:ems="10"
        android:textSize="18sp"
        android:inputType="text"
        android:paddingStart="10dp"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_date" />

    <EditText
        android:id="@+id/inp_date"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:digits="0123456789."
        android:ems="10"
        android:hint="@string/birthdate"
        android:inputType="date|text"
        android:paddingStart="10dp"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_fathname" />

    <EditText
        android:id="@+id/inp_surname"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/surname"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <EditText
        android:id="@+id/hm"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:inputType="textPersonName"
        android:onClick="onHMMMMClick"
        android:paddingStart="10dp"
        android:textColor="@color/text"
        android:focusable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_date" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="409dp"
        android:layout_height="183dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/create_car" />

    <EditText
        android:id="@+id/inp_fathname"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/fathername"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        android:textColor="@color/text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_name" />

    <EditText
        android:id="@+id/inp_name"
        android:layout_width="360dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/name"
        android:textColor="@color/text"
        android:inputType="textPersonName"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inp_surname" />

    <Button
        android:id="@+id/skipf_btn"
        android:layout_width="93dp"
        android:layout_height="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/analys"
        android:onClick="onClickGETTOTHEBUSINESS"
        android:stateListAnimator="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>